apps/actual-budget/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: actual-budget-ingress
  namespace: actual-budget
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`budget.sobrinho.pt`)
      kind: Rule
      services:
        - name: actual-budget
          port: main
